--- a/console-blackjack/console-blackjack.csproj
+++ b/console-blackjack/console-blackjack.csproj
@@ -3,7 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>console_blackjack</RootNamespace>
+    <RootNamespace>ConsoleBlackjack</RootNamespace>
+    <PackageId>Console Blackjack</PackageId>
+    <Authors>Beau Findlay</Authors>
+    <Product>Console Blackjack</Product>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 
 </Project>
