--- a/console-blackjack/ConsoleBlackjack.csproj
+++ b/console-blackjack/ConsoleBlackjack.csproj
@@ -9,4 +9,8 @@
 		<Product>Console Blackjack</Product>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
+	</ItemGroup>
+
 </Project>
